<resources>
    <string name="app_name">Campus Estudiantil</string>
    <string name="bienvenido_text">Bienvenido al campus estudiantil</string>
    <string name="campus_estudiantil">Campus estudiantil</string>
    <string name="mensaje_login">Todo lo que necesitas en un sólo lugar</string>
    <string name="ingresar">Ingresar</string>
    <string name="logo_campus">Logo Campus</string>

    <!-- Home -->
    <string name="titulo_home">¡Hola, bienvenid@!</string>
    <string name="icono_materias">📖</string>
    <string name="mis_materias">Mis materias</string>
    <string name="detalle_materias">Ver tus materias y detalles</string>

    <string name="icono_grupos">👥</string>
    <string name="grupos_trabajo">Grupos de trabajo</string>
    <string name="detalle_grupos">Encuentra o crea tu grupo</string>

    <!-- Pantalla Mis materias -->
    <string name="titulo_materia">Mis materias</string>

    <!-- Pantalla Grupos -->
    <string name="titulo_grupos">Grupos de trabajo</string>
    <string name="crear_grupo">Crear grupo</string>
    <string name="buscar_grupos">Buscar grupos</string>
    <string name="mis_grupos">Mis grupos</string>

    <!-- Simulación de grupos -->
    <string name="grupo_base_datos">Parcial 1 - Programación</string>
    <string name="grupo_base_datos_detalle">Faltan 2 integrantes</string>
    <string name="grupo_programacion">Parcial 1 -  Base de Datos III</string>
    <string name="grupo_programacion_detalle">Completo</string>
    <string name="grupo_estado_abierto">Abierto</string>
    <string name="grupo_estado_cerrado">Cerrado</string>

    <!-- Simulación de creación de grupo creado dinámicamente -->
    <string name="grupo_creado_titulo">Parcial 1 - Aplicaciones Móviles</string>
    <string name="grupo_creado_detalle">Faltan 2 integrantes</string>
    <string name="agregar_materia">Agregar Materia</string>
    <string name="materia_i">Programación I</string>
    <string name="prog_info">Comisión A - Lunes 18hs</string>
    <string name="materia_ii">Base de Datos</string>
    <string name="db_info">Comisión B - Miércoles 20hs</string>
</resources>