<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F3FA">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#5B45D9"
        android:gravity="center"
        android:text="@string/titulo_materia"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollMaterias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintBottom_toTopOf="@id/btnAgregar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layoutListaMaterias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_card"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:text="@string/materia_i"
                    android:textColor="#222222"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prog_info"
                    android:textColor="#555555"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_card"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:text="@string/materia_ii"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#222222"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/db_info"
                    android:textSize="13sp"
                    android:textColor="#555555"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#5B45D9"
        android:text="@string/agregar_materia"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>