<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".HomeActivity">

    <!-- Barra superior título -->
    <TextView
        android:id="@+id/tituloHome"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/titulo_home"
        android:textColor="@color/textWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenedor de cards -->
    <LinearLayout
        android:id="@+id/contenedorCards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="22dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tituloHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Card "Mis materias" -->
        <LinearLayout
            android:id="@+id/cardMaterias"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_card"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:id="@+id/iconMaterias"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/bg_icon_purple"
                android:gravity="center"
                android:text="@string/icono_materias"
                android:textSize="26sp" />

            <LinearLayout
                android:id="@+id/contenedorMisMaterias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMaterias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mis_materias"
                    android:textColor="@color/colorTextApp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDetalleMaterias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_materias"
                    android:textColor="@color/colorSub"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <!-- Card "Grupos de trabajo" -->

        <LinearLayout
            android:id="@+id/cardGrupos"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_card"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:id="@+id/iconGrupos"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/bg_icon_purple"
                android:gravity="center"
                android:text="@string/icono_grupos"
                android:textSize="26sp" />

            <LinearLayout
                android:id="@+id/contenedorTextosGrupos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtGrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grupos_trabajo"
                    android:textColor="@color/colorTextApp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDetalleGrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_grupos"
                    android:textColor="@color/colorSub"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>